# fastapi_azure_auth

./: Makefile  init_mac.sh  init_win.ps1  pyproject.toml
app/: endpoints.py
service/: common.py  google_auth.py
